--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -46,6 +46,9 @@ aks create:
       node_os_upgrade_channel:
         rule_exclusions:
         - option_length_too_long
+      nodepool_allowed_host_ports:
+        rule_exclusions:
+        - option_length_too_long
 
 aks enable-addons:
   parameters:
