--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -512,6 +512,8 @@ stages:
             azdev extension add ${FinalTarget}
           fi
           echo ${FinalTarget}
+          
+          serial_modules="appservice botservice cloud network azure-cli-core azure-cli-telemetry"
   
           # This helps detect issues in CI if a used SDK API version is deleted by the below script.
           python $workDir/s/scripts/trim_sdk.py
@@ -532,6 +534,9 @@ stages:
             echo "Commit mode"
             azdev test ${FinalTarget} --no-exitfirst -a "-n $(USER_PARALLELISM)"
             azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+          elif [[ "$serial_modules" =~ "$FinalTarget" ]]; then
+            echo "Series mode"
+            azdev test ${FinalTarget} $(USER_LIVE) --xml-path test_results.sequential.xml --no-exitfirst -a "-n 1 --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.sequential.json --html=$(Target).$(platform).report.sequential.html --self-contained-html --capture=sys"
           else
             echo "Normal mode"
             # Sequential
@@ -1078,6 +1083,8 @@ stages:
             azdev extension add ${FinalTarget}
           fi
           echo ${FinalTarget}
+          
+          serial_modules="appservice botservice cloud network azure-cli-core azure-cli-telemetry"
   
           # This helps detect issues in CI if a used SDK API version is deleted by the below script.
           python $workDir/s/scripts/trim_sdk.py
@@ -1098,6 +1105,9 @@ stages:
             echo "Commit mode"
             azdev test ${FinalTarget} --no-exitfirst -a "-n $(USER_PARALLELISM)"
             azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+          elif [[ "$serial_modules" =~ "$FinalTarget" ]]; then
+            echo "Series mode"
+            azdev test ${FinalTarget} $(USER_LIVE) --xml-path test_results.sequential.xml --no-exitfirst -a "-n 1 --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.sequential.json --html=$(Target).$(platform).report.sequential.html --self-contained-html --capture=sys"
           else
             echo "Normal mode"
             # Sequential
@@ -1643,6 +1653,8 @@ stages:
           fi
           echo ${FinalTarget}
           
+          serial_modules="appservice botservice cloud network azure-cli-core azure-cli-telemetry"
+          
           # This helps detect issues in CI if a used SDK API version is deleted by the below script.
           python $workDir/s/scripts/trim_sdk.py
   
@@ -1662,6 +1674,9 @@ stages:
             echo "Commit mode"
             azdev test ${FinalTarget} --no-exitfirst -a "-n $(USER_PARALLELISM)"
             azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+          elif [[ "$serial_modules" =~ "$FinalTarget" ]]; then
+            echo "Series mode"
+            azdev test ${FinalTarget} $(USER_LIVE) --xml-path test_results.sequential.xml --no-exitfirst -a "-n 1 --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.sequential.json --html=$(Target).$(platform).report.sequential.html --self-contained-html --capture=sys"
           else
             echo "Normal mode"
             # Sequential
