--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -211,6 +211,7 @@ jobs:
 
   - script: |
       set ARCH=$(Platform)
+      set TARGET=msi
       set /p CLI_VERSION=<$(System.ArtifactsDirectory)/metadata/version
       set
       
@@ -227,6 +228,47 @@ jobs:
     inputs:
       TargetPath: 'build_scripts/windows/out/'
       ArtifactName: msi-$(Platform)
+
+- job: BuildWindowsZIP
+  displayName: Build Windows ZIP
+  strategy:
+    matrix:
+      x86:
+        Platform: x86
+      x64:
+        Platform: x64
+
+  dependsOn: ExtractMetadata
+  condition: succeeded()
+  pool:
+    name: ${{ variables.windows_pool }}
+  steps:
+    - task: DownloadPipelineArtifact@1
+      displayName: 'Download Build Artifacts'
+      inputs:
+        TargetPath: '$(Build.ArtifactStagingDirectory)/metadata'
+        artifactName: metadata
+
+
+    - script: |
+        set ARCH=$(Platform)
+        set TARGET=zip
+        set /p CLI_VERSION=<$(System.ArtifactsDirectory)/metadata/version
+        set
+        
+        build_scripts/windows/scripts/build.cmd
+      displayName: 'Build Windows ZIP'
+
+    - task: AzureArtifacts.manifest-generator-task.manifest-generator-task.ManifestGeneratorTask@0
+      displayName: 'SBOM'
+      inputs:
+        BuildDropPath: 'build_scripts/windows/out/'
+
+    - task: PublishPipelineArtifact@0
+      displayName: 'Publish Artifact: ZIP'
+      inputs:
+        TargetPath: 'build_scripts/windows/out/'
+        ArtifactName: zip-$(Platform)
 
 - job: TestMsiInstallation
   displayName: Test MSI Installation
