Remove access keys from recorded tests

--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_list_keys.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_list_keys.yaml
@@ -34,8 +34,8 @@ interactions:
         {},\r\n    \"redisConfiguration\": {\r\n      \"maxclients\": \"256\",\r\n
         \     \"maxmemory-reserved\": \"30\",\r\n      \"maxfragmentationmemory-reserved\":
         \"30\",\r\n      \"maxmemory-delta\": \"30\"\r\n    },\r\n    \"accessKeys\":
-        {\r\n      \"primaryKey\": \"AWCBNFj3FAtHn4dzPNaY0yCSkrQgtTDuGAzCaKJkvbQ=\",\r\n
-        \     \"secondaryKey\": \"eaGDRSyWI4Oa9Olk8GfOPecwTg5oQJnKjAzCaNDAqx4=\"\r\n
+        {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": []\r\n
         \ }\r\n}"
@@ -1759,7 +1759,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_redis000001/providers/Microsoft.Cache/redis/cliredis000002/listKeys?api-version=2023-04-01
   response:
     body:
-      string: '{"primaryKey":"AWCBNFj3FAtHn4dzPNaY0yCSkrQgtTDuGAzCaKJkvbQ=","secondaryKey":"eaGDRSyWI4Oa9Olk8GfOPecwTg5oQJnKjAzCaNDAqx4="}'
+      string: '{"primaryKey":"***=","secondaryKey":"***="}'
     headers:
       cache-control:
       - no-cache
