--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_managed_identity.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_managed_identity.yaml
@@ -36,8 +36,8 @@ interactions:
         {},\r\n    \"redisConfiguration\": {\r\n      \"maxclients\": \"256\",\r\n
         \     \"maxmemory-reserved\": \"30\",\r\n      \"maxfragmentationmemory-reserved\":
         \"30\",\r\n      \"maxmemory-delta\": \"30\"\r\n    },\r\n    \"accessKeys\":
-        {\r\n      \"primaryKey\": \"tTfijV4ko84HlpjrfGGIIwx4ciXW88oYvAzCaFkSQfw=\",\r\n
-        \     \"secondaryKey\": \"10OENKqGx8NHlAsdN4SI701HLVsmtgiOtAzCaOleKaE=\"\r\n
+        {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": []\r\n
         \ },\r\n  \"identity\": {\r\n    \"type\": \"SystemAssigned, UserAssigned\",\r\n
