--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_regenerate_key_update_tags.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_regenerate_key_update_tags.yaml
@@ -35,8 +35,8 @@ interactions:
         \"Enabled\",\r\n    \"tenantSettings\": {},\r\n    \"redisConfiguration\":
         {\r\n      \"maxclients\": \"7500\",\r\n      \"maxmemory-reserved\": \"642\",\r\n
         \     \"maxfragmentationmemory-reserved\": \"642\",\r\n      \"maxmemory-delta\":
-        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"Vh6eTQW8kpx1jqvef5MDmFgfEB24GfTkuAzCaGkQWSM=\",\r\n
-        \     \"secondaryKey\": \"fCrfZQ71BLkG3ONTNSo5tUL1yQSFFELYnAzCaIfP8cU=\"\r\n
+        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": []\r\n
         \ }\r\n}"
@@ -1168,7 +1168,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_redis000001/providers/Microsoft.Cache/redis/cliredis000002/regenerateKey?api-version=2023-04-01
   response:
     body:
-      string: '{"primaryKey":"SkT62clr8rv5naQj8aI3cYJK2tecn0fiYAzCaBDli8M=","secondaryKey":"fCrfZQ71BLkG3ONTNSo5tUL1yQSFFELYnAzCaIfP8cU="}'
+      string: '{"primaryKey":"SkT62clr8rv5naQj8aI3cYJK2tecn0fiYAzCaBDli8M=","secondaryKey":"***="}'
     headers:
       cache-control:
       - no-cache
