--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_patch_schedule.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_patch_schedule.yaml
@@ -35,8 +35,8 @@ interactions:
         \"Enabled\",\r\n    \"tenantSettings\": {},\r\n    \"redisConfiguration\":
         {\r\n      \"maxclients\": \"7500\",\r\n      \"maxmemory-reserved\": \"642\",\r\n
         \     \"maxfragmentationmemory-reserved\": \"642\",\r\n      \"maxmemory-delta\":
-        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"N27QGg5VGkcNiINvL3tGYAf9qiVHP2f6mAzCaEbtgxg=\",\r\n
-        \     \"secondaryKey\": \"JhlEJL5xBGAP4uQL15vHYXlvJWdAdEib0AzCaE8FDRg=\"\r\n
+        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": []\r\n
         \ }\r\n}"
