--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_redisversion.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_redisversion.yaml
@@ -35,8 +35,8 @@ interactions:
         {},\r\n    \"redisConfiguration\": {\r\n      \"maxclients\": \"256\",\r\n
         \     \"maxmemory-reserved\": \"30\",\r\n      \"maxfragmentationmemory-reserved\":
         \"30\",\r\n      \"maxmemory-delta\": \"30\"\r\n    },\r\n    \"accessKeys\":
-        {\r\n      \"primaryKey\": \"FimIQ8O1813XNe0QUJJpr0CrJNafW16DFAzCaFFjNqM=\",\r\n
-        \     \"secondaryKey\": \"hY6zICeWYkl6tqaDP1T3dK4ugnMhJPoCUAzCaPyUmEg=\"\r\n
+        {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": []\r\n
         \ }\r\n}"
