Other Secrets removed from test recordings

--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_regenerate_key_update_tags.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_regenerate_key_update_tags.yaml
@@ -1168,7 +1168,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_redis000001/providers/Microsoft.Cache/redis/cliredis000002/regenerateKey?api-version=2023-04-01
   response:
     body:
-      string: '{"primaryKey":"SkT62clr8rv5naQj8aI3cYJK2tecn0fiYAzCaBDli8M=","secondaryKey":"***="}'
+      string: '{"primaryKey":"***=","secondaryKey":"***="}'
     headers:
       cache-control:
       - no-cache
@@ -1222,7 +1222,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_redis000001/providers/Microsoft.Cache/redis/cliredis000002/regenerateKey?api-version=2023-04-01
   response:
     body:
-      string: '{"primaryKey":"SkT62clr8rv5naQj8aI3cYJK2tecn0fiYAzCaBDli8M=","secondaryKey":"zCeodnnv4sqrpUcf8qbI6QRgtGL9buie7AzCaMbpkPg="}'
+      string: '{"primaryKey":"***=","secondaryKey":"***="}'
     headers:
       cache-control:
       - no-cache
