--- a/src/azure-cli/azure/cli/command_modules/netappfiles/tests/latest/recordings/test_get_region_info.yaml
+++ b/src/azure-cli/azure/cli/command_modules/netappfiles/tests/latest/recordings/test_get_region_info.yaml
@@ -13,9 +13,9 @@ interactions:
       ParameterSetName:
       - -l
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-mgmt-netapp/10.1.0 Python/3.10.10 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.53.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.10 (Windows-10-10.0.22621-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.NetApp/locations/westus2/regionInfo?api-version=2022-11-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.NetApp/locations/westus2/regionInfo?api-version=2023-05-01
   response:
     body:
       string: '{"storageToNetworkProximity":"T1AndT2AndAcrossT2","availabilityZoneMappings":[{"availabilityZone":"1","isAvailable":true},{"availabilityZone":"2","isAvailable":true},{"availabilityZone":"3","isAvailable":true}]}'
@@ -27,7 +27,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Tue, 14 Nov 2023 12:54:21 GMT
+      - Thu, 07 Dec 2023 15:43:37 GMT
       expires:
       - '-1'
       pragma:
