--- a/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_link_target_available_service.yaml
+++ b/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_link_target_available_service.yaml
@@ -18,7 +18,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_monitor_log_analytics_workspace_link_target000001?api-version=2022-09-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001","name":"test_monitor_log_analytics_workspace_link_target000001","type":"Microsoft.Resources/resourceGroups","location":"westus","tags":{"product":"azurecli","cause":"automation","test":"test_monitor_log_analytics_workspace_link_target_available_service","date":"2023-12-14T02:36:15Z","module":"monitor"},"properties":{"provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001","name":"test_monitor_log_analytics_workspace_link_target000001","type":"Microsoft.Resources/resourceGroups","location":"westus","tags":{"product":"azurecli","cause":"automation","test":"test_monitor_log_analytics_workspace_link_target_available_service","date":"2023-12-14T03:54:12Z","module":"monitor"},"properties":{"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -27,7 +27,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 02:36:24 GMT
+      - Thu, 14 Dec 2023 03:54:22 GMT
       expires:
       - '-1'
       pragma:
@@ -66,7 +66,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2022-10-01
   response:
     body:
-      string: '{"properties":{"customerId":"51461c62-a10e-4b95-86ac-9b28695d69b6","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-12-14T02:36:26.9043004Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-12-14T22:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-12-14T02:36:26.9043004Z","modifiedDate":"2023-12-14T02:36:26.9043004Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"1b04ff4f-0000-0700-0000-657a6a2a0000\""}'
+      string: '{"properties":{"customerId":"0888bf59-3e9c-4c3e-8934-83b82cfab1e1","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-12-14T03:54:25.5051558Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-12-15T00:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-12-14T03:54:25.5051558Z","modifiedDate":"2023-12-14T03:54:25.5051558Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"1c0449af-0000-0700-0000-657a7c710000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 02:36:26 GMT
+      - Thu, 14 Dec 2023 03:54:25 GMT
       expires:
       - '-1'
       location:
@@ -118,7 +118,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2022-10-01
   response:
     body:
-      string: '{"properties":{"customerId":"51461c62-a10e-4b95-86ac-9b28695d69b6","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-12-14T02:36:26.9043004Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-12-14T22:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-12-14T02:36:26.9043004Z","modifiedDate":"2023-12-14T02:36:26.9043004Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"1b04ff4f-0000-0700-0000-657a6a2a0000\""}'
+      string: '{"properties":{"customerId":"0888bf59-3e9c-4c3e-8934-83b82cfab1e1","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-12-14T03:54:25.5051558Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-12-15T00:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-12-14T03:54:25.5051558Z","modifiedDate":"2023-12-14T03:54:25.5051558Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"1c0449af-0000-0700-0000-657a7c710000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -131,7 +131,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 02:36:27 GMT
+      - Thu, 14 Dec 2023 03:54:26 GMT
       expires:
       - '-1'
       pragma:
@@ -159,7 +159,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - monitor log-analytics workspace link-target list
+      - monitor log-analytics workspace list-link-target
       Connection:
       - keep-alive
       User-Agent:
@@ -177,7 +177,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Thu, 14 Dec 2023 02:36:36 GMT
+      - Thu, 14 Dec 2023 03:54:34 GMT
       expires:
       - '-1'
       pragma:
@@ -201,7 +201,7 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - monitor log-analytics workspace available-service-tier list
+      - monitor log-analytics workspace list-available-service-tier
       Connection:
       - keep-alive
       ParameterSetName:
@@ -212,7 +212,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002/availableServiceTiers?api-version=2020-08-01
   response:
     body:
-      string: '[{"serviceTier":"PerGB2018","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":30},{"serviceTier":"CapacityReservation","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":31,"lastSkuUpdate":"2023-12-14T02:36:26.9043004Z"}]'
+      string: '[{"serviceTier":"PerGB2018","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":30},{"serviceTier":"CapacityReservation","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":31,"lastSkuUpdate":"2023-12-14T03:54:25.5051558Z"}]'
     headers:
       access-control-allow-origin:
       - '*'
@@ -223,7 +223,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 02:36:38 GMT
+      - Thu, 14 Dec 2023 03:54:36 GMT
       expires:
       - '-1'
       pragma:
