Remove cred scan suppressions and add fake values in recordings

--- a/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_config_with_appcontainer_managed_environment_error.yaml
+++ b/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_config_with_appcontainer_managed_environment_error.yaml
@@ -3601,7 +3601,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","WEBSITE_AUTH_ENCRYPTION_KEY":"5fcQ3UoFiR/NyEW4rRx/WcUrQmi70yEPa9V75o0DAvA="}}'
+        Europe","properties":{"AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue"}}'
     headers:
       cache-control:
       - no-cache
@@ -3684,7 +3684,7 @@ interactions:
 - request:
     body: '{"properties": {"AzureWebJobsStorage": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==",
       "DOCKER_REGISTRY_SERVER_URL": "mcr.microsoft.com", "WEBSITE_AUTH_ENCRYPTION_KEY":
-      "5fcQ3UoFiR/NyEW4rRx/WcUrQmi70yEPa9V75o0DAvA=", "APPLICATIONINSIGHTS_CONNECTION_STRING":
+      "fakeValue", "APPLICATIONINSIGHTS_CONNECTION_STRING":
       "InstrumentationKey=a3b5b4dc-a535-41d5-84b6-81c890b5fcd1;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       Accept:
@@ -3998,7 +3998,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","WEBSITE_AUTH_ENCRYPTION_KEY":"5fcQ3UoFiR/NyEW4rRx/WcUrQmi70yEPa9V75o0DAvA=","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=a3b5b4dc-a535-41d5-84b6-81c890b5fcd1;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
+        Europe","properties":{"AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=a3b5b4dc-a535-41d5-84b6-81c890b5fcd1;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       cache-control:
       - no-cache
@@ -4049,7 +4049,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","WEBSITE_AUTH_ENCRYPTION_KEY":"5fcQ3UoFiR/NyEW4rRx/WcUrQmi70yEPa9V75o0DAvA=","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=a3b5b4dc-a535-41d5-84b6-81c890b5fcd1;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
+        Europe","properties":{"AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=a3b5b4dc-a535-41d5-84b6-81c890b5fcd1;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       cache-control:
       - no-cache
