update session records

--- a/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
+++ b/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
@@ -80,19 +80,21 @@ interactions:
       content-type:
       - application/json
       date:
-      - Wed, 06 Dec 2023 23:16:20 GMT
+      - Wed, 13 Dec 2023 22:54:56 GMT
       pragma:
       - no-cache
+      server:
+      - Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-gatewayversion:
       - version=2.14.0
-      x-msedge-ref:
-      - 'Ref A: E66902D5F511480E98976CA9CA4D706A Ref B: CO6AA3150217029 Ref C: 2023-12-06T23:16:10Z'
     status:
       code: 200
       message: Ok
@@ -125,19 +127,21 @@ interactions:
       content-type:
       - application/json
       date:
-      - Wed, 06 Dec 2023 23:16:21 GMT
+      - Wed, 13 Dec 2023 22:54:56 GMT
       pragma:
       - no-cache
+      server:
+      - Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      x-cache:
-      - CONFIG_NOCACHE
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       x-content-type-options:
       - nosniff
       x-ms-gatewayversion:
       - version=2.14.0
-      x-msedge-ref:
-      - 'Ref A: 8D9E57DA33414CECB876C3A5AF110EB5 Ref B: CO6AA3150217039 Ref C: 2023-12-06T23:16:20Z'
     status:
       code: 200
       message: Ok
