--- a/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_workloadprofiles.yaml
+++ b/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_workloadprofiles.yaml
@@ -8957,7 +8957,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"ZhRZ6S+zcDGBzJft4sYGo0bLuBst7XS7H0LAfTmfUK0="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue"}}'
     headers:
       cache-control:
       - no-cache
@@ -9045,7 +9045,7 @@ interactions:
 - request:
     body: '{"properties": {"DOCKER_REGISTRY_SERVER_URL": "mcr.microsoft.com", "FUNCTIONS_EXTENSION_VERSION":
       "~4", "AzureWebJobsStorage": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==",
-      "WEBSITE_AUTH_ENCRYPTION_KEY": "ZhRZ6S+zcDGBzJft4sYGo0bLuBst7XS7H0LAfTmfUK0=",
+      "WEBSITE_AUTH_ENCRYPTION_KEY": "fakeValue",
       "AzureWebJobsDashboard": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       Accept:
@@ -9260,7 +9260,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"ZhRZ6S+zcDGBzJft4sYGo0bLuBst7XS7H0LAfTmfUK0=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -9314,7 +9314,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"ZhRZ6S+zcDGBzJft4sYGo0bLuBst7XS7H0LAfTmfUK0=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -9682,7 +9682,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"ZhRZ6S+zcDGBzJft4sYGo0bLuBst7XS7H0LAfTmfUK0=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
