--- a/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_workloadprofiles.yaml
+++ b/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_workloadprofiles.yaml
@@ -9437,7 +9437,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"SHRGH+vNw9455MXacSzdpdttsXH+yVYVFv4h4Dja4/s="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue"}}'
     headers:
       cache-control:
       - no-cache
@@ -9525,7 +9525,7 @@ interactions:
 - request:
     body: '{"properties": {"DOCKER_REGISTRY_SERVER_URL": "mcr.microsoft.com", "FUNCTIONS_EXTENSION_VERSION":
       "~4", "AzureWebJobsStorage": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==",
-      "WEBSITE_AUTH_ENCRYPTION_KEY": "SHRGH+vNw9455MXacSzdpdttsXH+yVYVFv4h4Dja4/s=",
+      "WEBSITE_AUTH_ENCRYPTION_KEY": "fakeValue",
       "AzureWebJobsDashboard": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       Accept:
@@ -9740,7 +9740,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"SHRGH+vNw9455MXacSzdpdttsXH+yVYVFv4h4Dja4/s=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -9794,7 +9794,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"SHRGH+vNw9455MXacSzdpdttsXH+yVYVFv4h4Dja4/s=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -10302,7 +10302,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"SHRGH+vNw9455MXacSzdpdttsXH+yVYVFv4h4Dja4/s=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
